Update Theme Maker

--- a/bhook/global.html
+++ b/bhook/global.html
@@ -1,9 +1,7 @@
 @content_client
 
 <!-- halaman item -->
-<b:if cond='data:view.isSingleItem'>
-    
-</b:if>
+@item
 
 <!-- halaman pencarian -->
 <b:if cond='data:view.isSearch and !data:view.isLabelSearch'>
